@@ -1,3 +1,7 @@
+2015-02-16  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>
+
+	* jpegimage.c: Fix jpeg_get_density().
+
 2015-01-07  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>
 
 	* bmpimage.c, dpxcrypt.c, dvi.c: Avoid compiler warnings.
